--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-editar/formacion-academica-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-modal-editar/formacion-academica-modal-editar.component.html
@@ -173,8 +173,7 @@ aria-hidden="true"
                                 #nuevaImagen
                                 (click)="ocultarMensajeError()" 
                                 type="file"
-                                accept="image/*"
-                                formControlName="imagen">
+                                accept="image/*">
                             <label class="textoModal">{{nombreArchivo}}</label>             
                         </div>                        
                     </div>
