--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,7 +1,7 @@
 <section class="d-flex justify-content-center align-items-center " id="acerca de mi"  >
     <div class="card" id="container" >
         <div class="my-2 d-flex justify-content-between align-items-baseline" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">                        
-            <h3><strong>{{titulo}}</strong></h3>                          
+            <h3><strong>{{miAcercaDeMi.titulo}}</strong></h3>                          
             <fa-icon
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
@@ -10,11 +10,10 @@
             </fa-icon> 
         </div>        
         <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
-            <p class="card-text">{{texto}}</p> 
+            <p class="card-text">{{miAcercaDeMi.descripcion}}</p> 
         </div>                                                                     
     </div>
 </section> 
 <app-acerca-de-mi-modal
-    (modificarTitulo)="cambiarTitulo($event)"
-    (modificarTexto)="cambiarTexto($event)">
+(actualizarDatos)="actualizarAcercaDeMi($event)">
 </app-acerca-de-mi-modal>   
