--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal/conocimientos-modal.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal/conocimientos-modal.component.html
@@ -19,7 +19,7 @@
                             <input 
                                 #nuevoTitulo 
                                 type="text" 
-                                [value]="titulo"
+                                [value]="miTitulo.titulo"
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nuevo título"
                                 maxlength="30"
