--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-crear/conocimientos-modal-crear.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-crear/conocimientos-modal-crear.component.html
@@ -18,7 +18,6 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal ">Nombre</label>
                             <input 
-                                #Nombre 
                                 type="text" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nombre"
@@ -37,11 +36,10 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal ">Nivel</label>
                             <input 
-                                #Nivel 
                                 type="text" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nivel de progreso (entre 10 y 90)"
-                                formControlName="nivel"
+                                formControlName="porcentaje_progreso"
                                 [ngClass]="{'is-invalid':formularioInvalido && (formularioConocimientos.get('nivel')?.errors?.['required'] || 
                                 formularioConocimientos.get('nivel')?.errors?.['pattern'])}"
                                 (click)="ocultarMensajeError()"
@@ -64,10 +62,8 @@ aria-hidden="true"
                         <input 
                             class="inputEdicion me-2" 
                             (change)="capturarImagen($event)" 
-                            #nuevaImagen 
                             type="file"
                             accept="image/*"
-                            formControlName="imagen"
                             (click)="ocultarMensajeError()">
                         <label class="textoModal">{{nombreArchivo}}</label> 
                         <p 
