--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-item/conocimientos-item.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-item/conocimientos-item.component.html
@@ -6,13 +6,17 @@
         </div>
         <div>            
             <button>
-                <fa-icon [icon]="faX"  class="icono-borrar"></fa-icon>    
+                <fa-icon 
+                        [icon]="faX"  
+                        class="icono-borrar"
+                        data-bs-toggle="modal" 
+                        [attr.data-bs-target]="'#conocimiento-modal-eliminar-' + conocimiento.id">
+                    </fa-icon>    
             </button>       
             <button>
                 <fa-icon 
                         id="icono-editar"
-                        [icon]="faSquarePen" 
-                         
+                        [icon]="faSquarePen"                          
                         data-bs-toggle="modal" 
                         [attr.data-bs-target]="'#conocimiento-modal-editar-' + conocimiento.id">
                 </fa-icon> 
