--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-editar/conocimientos-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-editar/conocimientos-modal-editar.component.html
@@ -37,7 +37,6 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal ">Nivel</label>
                             <input 
-                                #Nivel 
                                 type="text" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nivel de progreso (entre 10 y 90)"
@@ -59,8 +58,9 @@ aria-hidden="true"
                         </p>       
                     </div>                                  
                     <div class="mb-3">
-                        <label for="user" class="form-label me-5 textoModal">Imagen actual</label>
-                        <img class="imagenEdicion" [src]="conocimiento.imagen">
+                        <label for="user" class="form-label me-5 textoModal">Imagen</label>
+                        <img *ngIf="!previsualizacionImagen" class="imagenEdicion" [src]="conocimiento.imagen">
+                        <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
                     </div>                        
                     <div class="mb-2">
                         <label for="user" class="form-label textoModal me-4">Nueva Imagen</label>
@@ -70,14 +70,14 @@ aria-hidden="true"
                             type="file" 
                             accept="image/*"
                             (click)="ocultarMensajeError()">
-                        <label class="textoModal">{{nombreArchivo}}</label> 
+                        
                     </div>
                     <p 
                         class="text-danger" 
                         *ngIf="formularioInvalido && formularioConocimientos.get('imagen')?.errors?.['required']">
                         Este campo es obligatorio
-                    </p>                           
-                    <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">                
+                    </p>
+                    <label class="textoModal">{{nombreArchivo}}</label>                                           
                     
                     <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
                         <button 
