--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-editar/conocimientos-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal-editar/conocimientos-modal-editar.component.html
@@ -18,7 +18,6 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal ">Nombre</label>
                             <input 
-                                #Nombre 
                                 type="text"
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nombre"
@@ -74,7 +73,7 @@ aria-hidden="true"
                     </div>
                     <p 
                         class="text-danger" 
-                        *ngIf="formularioInvalido && formularioConocimientos.get('imagen')?.errors?.['required']">
+                        *ngIf="formularioInvalido">
                         Este campo es obligatorio
                     </p>
                     <label class="textoModal">{{nombreArchivo}}</label>                                           
