--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex align-items-baseline gap-1 container"> 
         <p id="titulo">{{experiencia.puesto}}</p>                        
         <div class="d-flex">
-                <a href="{{experiencia.urlEmpresa}}" target="_blank">@ {{experiencia.empresa}}</a>
+                <a *ngIf="experiencia.url" href="{{experiencia.url}}" target="_blank">@ {{experiencia.nombre_empresa}}</a>
         </div>                        
 </div>
 <div>
-        <p id="duracion">{{experiencia.fechaInicio}} - {{experiencia.fechaFin}}</p>
+        <p id="duracion">{{experiencia.fecha_inicio}} - {{experiencia.fecha_fin}}</p>
         <p>{{experiencia.descripcion}}</p>
 </div>
 
