--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -26,7 +26,7 @@
                     class="boton-exp-item"
                     (click)="onSelect(experiencia); desaparecerPrimerExp(); alternarExperiencias()"
                     > 
-                    {{experiencia.empresa}}                   
+                    {{experiencia.nombre_empresa}}                   
                     <fa-icon 
                             [icon]="faX"   
                             id="icono-borrar"
@@ -52,11 +52,11 @@
                     <div class="d-flex align-items-baseline gap-1 container-titulo-primer-exp"> 
                         <p id="titulo-primer-exp">{{experiencias[0].puesto}}</p>                        
                         <div class="d-flex">                            
-                            <a href="{{experiencias[0].urlEmpresa}}" target="_blank">@ {{experiencias[0].empresa}}</a> 
+                            <a *ngIf="experiencias[0].url" href="{{experiencias[0].url}}" target="_blank">@ {{experiencias[0].nombre_empresa}}</a> 
                         </div>                       
                     </div>
                     <div>
-                        <p id="duracion-primer-exp">{{experiencias[0].fechaInicio}} - {{experiencias[0].fechaFin}}</p>
+                        <p id="duracion-primer-exp">{{experiencias[0].fecha_inicio}} - {{experiencias[0].fecha_fin}}</p>
                         <p>{{experiencias[0].descripcion}}</p>
                     </div>
                 </div>
@@ -66,7 +66,8 @@
     </div>                     
 </section>
 <app-experiencia-laboral-modal
-    (modificarTitulo)="cambiarTitulo($event)">
+
+>
 </app-experiencia-laboral-modal>
 <app-experiencia-laboral-modal-crear>
 
