PUT, GET y CREATE exp laboral

--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-modal/experiencia-laboral-modal.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-modal/experiencia-laboral-modal.component.html
@@ -16,9 +16,9 @@
                     <div class="mb-3">
                         <div class="d-flex modal-body-div align-items-baseline">
                             <label for="user" class="form-label etiquetaModal">Título</label>
-                            <input 
-                                #nuevoTitulo 
-                                type="text" 
+                            <input             
+                                type="text"
+                                [value]="miTitulo.titulo" 
                                 class="form-control inputModal" 
                                 placeholder="Ingrese nuevo título"
                                 maxlength="30"
