--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-modal-editar/experiencia-laboral-modal-editar.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-modal-editar/experiencia-laboral-modal-editar.component.html
@@ -19,18 +19,18 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Empresa</label>
                             <input 
-                                #empresa 
+                          
                                 type="text" 
                                 class="form-control inputModal"
                                 (click)="ocultarMensajeError()" 
                                 placeholder="Ingrese el nombre de la empresa"
                                 maxlength="30"
-                                [ngClass]="{'is-invalid':formularioInvalido && formularioExperiencia.get('empresa')?.errors?.['required']}"
-                                formControlName="empresa">
+                                [ngClass]="{'is-invalid':formularioInvalido && formularioExperiencia.get('nombre_empresa')?.errors?.['required']}"
+                                formControlName="nombre_empresa">
                         </div>
                         <p 
                             class="text-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('empresa')?.errors?.['required']">
+                            *ngIf="formularioInvalido && formularioExperiencia.get('nombre_empresa')?.errors?.['required']">
                             Este campo es obligatorio
                         </p> 
                     </div> 
@@ -38,7 +38,7 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Puesto</label>
                             <input 
-                                #puesto
+
                                 type="text" 
                                 class="form-control inputModal"
                                 (click)="ocultarMensajeError()" 
@@ -57,7 +57,7 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">URL</label>
                             <input 
-                                #url
+                              
                                 type="text" 
                                 class="form-control inputModal"
                                 (click)="ocultarMensajeError()" 
@@ -82,24 +82,24 @@ aria-hidden="true"
                      <div class="d-flex align-items-baseline modal-body-div">
                          <label for="user" class="form-label etiquetaModal">Fecha Inicio</label>
                          <input 
-                             #fechaInicio
+                             
                              type="text" 
                              class="form-control inputModal"
                              (click)="ocultarMensajeError()" 
                              placeholder="Ingrese fecha de inicio (mes y año)"
                              maxlength="15"
-                             [ngClass]="{'is-invalid':formularioInvalido && (formularioExperiencia.get('fechaInicio')?.errors?.['required'] || 
-                             formularioExperiencia.get('fechaInicio')?.errors?.['pattern'])}"
-                             formControlName="fechaInicio">
+                             [ngClass]="{'is-invalid':formularioInvalido && (formularioExperiencia.get('fecha_inicio')?.errors?.['required'] || 
+                             formularioExperiencia.get('fecha_inicio')?.errors?.['pattern'])}"
+                             formControlName="fecha_inicio">
                      </div>
                      <p 
                          class="text-danger" 
-                         *ngIf="formularioInvalido && formularioExperiencia.get('fechaInicio')?.errors?.['required']">
+                         *ngIf="formularioInvalido && formularioExperiencia.get('fecha_inicio')?.errors?.['required']">
                          Este campo es obligatorio
                      </p> 
                      <p 
                          class="text-danger" 
-                         *ngIf="formularioInvalido && formularioExperiencia.get('fechaInicio')?.errors?.['pattern']">
+                         *ngIf="formularioInvalido && formularioExperiencia.get('fecha_inicio')?.errors?.['pattern']">
                          Debe ingresar una fecha en el formato correcto, ejemplo: Junio 2022.
                      </p> 
                     </div>
@@ -107,24 +107,24 @@ aria-hidden="true"
                         <div class="d-flex align-items-baseline modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Fecha Fin</label>
                             <input 
-                                #fechaFin
+                             
                                 type="text" 
                                 class="form-control inputModal"
                                 (click)="ocultarMensajeError()" 
                                 placeholder="Ingrese fecha de finalización (mes y año)"
                                 maxlength="15"
-                                [ngClass]="{'is-invalid':formularioInvalido && (formularioExperiencia.get('fechaFin')?.errors?.['required'] || 
-                             formularioExperiencia.get('fechaFin')?.errors?.['pattern'])}"
-                                formControlName="fechaFin">
+                                [ngClass]="{'is-invalid':formularioInvalido && (formularioExperiencia.get('fecha_fin')?.errors?.['required'] || 
+                             formularioExperiencia.get('fecha_fin')?.errors?.['pattern'])}"
+                                formControlName="fecha_fin">
                         </div>
                         <p 
                              class="text-danger" 
-                             *ngIf="formularioInvalido && formularioExperiencia.get('fechaFin')?.errors?.['required']">
+                             *ngIf="formularioInvalido && formularioExperiencia.get('fecha_fin')?.errors?.['required']">
                              Este campo es obligatorio
                          </p> 
                          <p 
                              class="text-danger" 
-                             *ngIf="formularioInvalido && formularioExperiencia.get('fechaFin')?.errors?.['pattern']">
+                             *ngIf="formularioInvalido && formularioExperiencia.get('fecha_fin')?.errors?.['pattern']">
                              Debe ingresar una fecha en el formato correcto, ejemplo: Junio 2022.
                          </p>
                     </div> 
@@ -132,7 +132,7 @@ aria-hidden="true"
                         <div class="d-flex align-items-center modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Descripción</label>              
                                 <textarea
-                                    #descripcion 
+                    
                                     maxlength="300"           
                                     class="form-control inputModal2"
                                     (click)="ocultarMensajeError()" 
@@ -167,4 +167,5 @@ aria-hidden="true"
         </div>
     </div>
 </div>                  
+
 
